FST-1459 Fixed issue with previous chapter being covered

--- a/step-web/src/main/webapp/scss/passage_columns.scss
+++ b/step-web/src/main/webapp/scss/passage_columns.scss
@@ -86,6 +86,7 @@
         position: absolute;
         top: $border-width;
         left: 50%;
+        z-index: 10;
         border: 7px solid $activeColor;
         border-right-color: transparent;
         border-bottom: 0 dotted;
